Fixed the "Hot" headings align.
I added "display:inline-block" to #hot-scripts and #hot-sprites. This fixed the position of the headings.

--- a/Site/main.css
+++ b/Site/main.css
@@ -129,6 +129,10 @@
         padding-left:5px;
         padding-right:5px;
     }
+    
+    #hot-sprites, #hot-scripts {
+    	display:inline-block;
+    }
 
     /* Footer */
 
